--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,8 +1,15 @@
+$small-mobile-width: 400px;
 $mobile-width: 550px;
 $tablet-width: 768px;
 $large-width: 1024px;
 $desktop-width: 75em;
 $x-large-width: 90em;
+
+@mixin small-mobile {
+  @media (max-width: #{$small-mobile-width}) {
+    @content;
+  }
+}
 
 @mixin mobile {
   @media (max-width: #{$mobile-width}) {
